Fixed tests according to new data structure setup